# VIBE-CODING

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
vibe_coding/: config.py  main.py
vibe_coding/core/inventory/domain/: models.py  repositories.py
vibe_coding/infrastructure/persistence/: database.py
vibe_coding/infrastructure/persistence/sqlalchemy/: models.py
