[tool.poetry]
name = "vibe-coding"
version = "0.1.0"
description = "Enterprise inventory system with AI-powered features."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
celery = "^5.3.6"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
httpx = "^0.27.0"
black = "^24.2.0"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
